Bug 464087 - highlight selection broken in RTL text when Line Height Multiplier > 1
Summary: highlight selection broken in RTL text when Line Height Multiplier > 1
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-10 06:31 UTC by Fahad Al-Saidi
Modified: 2023-04-04 19:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
the problem (600.94 KB, video/webm)
2023-01-10 06:31 UTC, Fahad Al-Saidi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fahad Al-Saidi 2023-01-10 06:31:44 UTC
Created attachment 155174 [details]
the problem

SUMMARY
***
when you set Line Height Multiplier > 1 and have 2 lines or more in Arabic the highlight of selection is broken, please see the screen recording to visualize the problem
***


STEPS TO REPRODUCE
1. set Line Height Multiplier to more than 1
2. select 1 or more line
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.26
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7
Kernel Version: 5.15.0-56-generic (64-bit)
Graphics Platform: X11


ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-03-28 21:02:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/529
Comment 2 Christoph Cullmann 2023-03-29 15:24:15 UTC
Git commit d2056b786e343b0232e9fb44f77d885e9850aca4 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 29/03/2023 at 15:23.
Pushed by cullmann into branch 'master'.

Fix selection highlight for RTL text with custom line height

M  +17   -3    src/render/katerenderer.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/d2056b786e343b0232e9fb44f77d885e9850aca4
Comment 3 Waqar Ahmed 2023-04-04 19:42:06 UTC
Git commit 8e6440b60ba09029f39f419b608ae9f22dc00f78 by Waqar Ahmed.
Committed on 04/04/2023 at 18:56.
Pushed by cullmann into branch 'kf5'.

Fix selection highlight for RTL text with custom line height

M  +17   -3    src/render/katerenderer.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/8e6440b60ba09029f39f419b608ae9f22dc00f78