Fix selection highlight for RTL text with custom line height

BUG: 464087